RESOLVED FIXED76025
Crash in HTMLMediaElement::shouldDisableSleep()
https://bugs.webkit.org/show_bug.cgi?id=76025
Summary Crash in HTMLMediaElement::shouldDisableSleep()
Jer Noble
Reported 2012-01-10 21:21:08 PST
Crash in HTMLMediaElement::shouldDisableSleep()
Attachments
Patch (1.36 KB, patch)
2012-01-10 21:24 PST, Jer Noble
mitz: review+
Jer Noble
Comment 1 2012-01-10 21:23:52 PST
Jer Noble
Comment 2 2012-01-10 21:24:34 PST
Jer Noble
Comment 3 2012-01-10 21:35:05 PST
Note You need to log in before you can comment on or make changes to this bug.