Crash in HTMLMediaElement::shouldDisableSleep() https://bugs.webkit.org/show_bug.cgi?id=76025

Reviewed by Dan Bernstein.

Check nullity of m_player before dereferencing.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::shouldDisableSleep):

Canonical link: https://commits.webkit.org/92842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104669 268f45cc-cd09-0410-ab3c-d52691b4dbfc